--- a/src/main/resources/formularioCRUD.fxml
+++ b/src/main/resources/formularioCRUD.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
@@ -43,5 +44,16 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
+      <Label layoutX="439.0" layoutY="254.0" prefHeight="18.0" prefWidth="102.0" text="Patron Builder">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <Separator layoutX="426.0" layoutY="248.0" orientation="VERTICAL" prefHeight="200.0" />
+      <CheckBox fx:id="evaluacion" layoutX="438.0" layoutY="274.0" mnemonicParsing="false" text="Evaluacion" />
+      <CheckBox fx:id="certificacion" layoutX="438.0" layoutY="297.0" mnemonicParsing="false" text="Certificacion" />
+      <CheckBox fx:id="polientrega" layoutX="438.0" layoutY="320.0" mnemonicParsing="false" text="Politica de Entrega" />
+      <TextField editable="false" layoutX="436.0" layoutY="348.0" promptText="SERVIENTREGA" />
+      <Button fx:id="bttBuilder" layoutX="439.0" layoutY="385.0" mnemonicParsing="false" onAction="#clickBuildProveedor" text="Solicitar Proveedor" />
    </children>
 </AnchorPane>
