--- a/software/src/main/resources/co/edu/poli/formulario_copy.fxml
+++ b/software/src/main/resources/co/edu/poli/formulario_copy.fxml
@@ -22,7 +22,7 @@
          </font>
       </Label>
       <Separator layoutX="272.0" layoutY="15.0" orientation="VERTICAL" prefHeight="495.0" prefWidth="1.0" />
-      <TextField disable="true" editable="false" layoutX="66.0" layoutY="66.0" promptText="Producto: &quot;Iphone&quot;" />
+      <TextField fx:id="nombreProducto" disable="true" editable="false" layoutX="66.0" layoutY="66.0" promptText="Producto: &quot;Iphone&quot;" />
       <TextField fx:id="precioProducto" layoutX="66.0" layoutY="99.0" promptText="Precio: $1000 " />
       <Button fx:id="guardarEstado" layoutX="86.0" layoutY="173.0" mnemonicParsing="false" onAction="#clickEstado" text="Guardar Estado" />
       <Button fx:id="mostrarEstados" layoutX="85.0" layoutY="205.0" mnemonicParsing="false" onAction="#clickMostrar" text="Mostrar Estados" />
